--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Pacman wiki</title>
     <link rel="shortcut icon" href="./images/favicon.png">
     <link rel="stylesheet" href="./index.css">
